[gd_scene load_steps=7 format=2]

[ext_resource path="res://Pumpkin/pumpkin.png" type="Texture" id=1]
[ext_resource path="res://Tasks/Cross/Cross.gd" type="Script" id=2]
[ext_resource path="res://OutlineShader.gdshader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 1.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true
shader_param/on = false

[sub_resource type="CapsuleShape2D" id=5]
radius = 9.0
height = 0.0

[sub_resource type="CircleShape2D" id=4]
radius = 41.1096

[node name="Cross" type="StaticBody2D"]
rotation = 0.349066
input_pickable = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
position = Vector2( 2.85588, -4.75999 )
scale = Vector2( 0.452003, 1.92351 )
texture = ExtResource( 1 )

[node name="Pumpkin" type="Sprite" parent="Sprite"]
position = Vector2( -3.65617, -4.92002 )
scale = Vector2( 4.04192, 0.0964047 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.82253, 10.6786 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2( 2.13504, -2.90545 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0

[connection signal="mouse_entered" from="." to="." method="_on_Cross_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Cross_mouse_exited"]
[connection signal="body_entered" from="InteractionArea" to="." method="_on_InteractionArea_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_InteractionArea_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
